--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,7 @@
 .dat*
 .repl_history
 build/
+.idea
 
 ## Documentation cache and generated files:
 /.yardoc/
@@ -33,3 +34,6 @@ build/
 
 # unless supporting rvm < 1.11.0 or doing something fancy, ignore this:
 .rvmrc
+
+# annoying mac stuff
+.DS_Store
